# skiciranje

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
assets/fonts/: .part
assets/lang/: default  sr_RS.UTF-8
assets/levels/: 1
doc/: file_structure.txt
examples/: demo.sketch
src/: .main.c.swp  .menu.c.swp  .tutorial.c.swp  clean.c  clean.h  editor.c  editor.h  fileselector.c  fileselector.h  functions.c  functions.h  init.c  init.h  line.h  main.c  menu.c  menu.h  shared.c  shared.h  snap.c  snap.h  tutorial.c  tutorial.h
